k8s/apps/misskey/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: misskey
    app.kubernetes.io/name: misskey
  name: misskey
  namespace: misskey
spec:
  ingressClassName: cilium
  rules:
    - host: misskey.walnuts.dev
      http:
        paths:
          - backend:
              service:
                name: misskey
                port:
                  number: 8080
            path: /
            pathType: Prefix
